@@ -1,5 +1,6 @@
 DIST aqemu-0.8.0.tar.bz2 866896 RMD160 1091e84b03bdcb2c88bb6665d1b49b10c791964f SHA1 ef7e68d8520a49ea28be4ece5cb45a294aa4e9f0 SHA256 29e2e8663bb34d10888994766bb3aba3a916bbf18d2d10c189309c61e813c363
+EBUILD aqemu-0.8.0-r1.ebuild 1058 RMD160 80c4e4f1823384a477a305264a0479d4cda23a0e SHA1 e3aa3edf568ebcf7d6cbb410fdeb969681273564 SHA256 39d28fa887612e682394d02b9382a7577a6083235af8af1bdd9ac483aa3811fd
 EBUILD aqemu-0.8.0.ebuild 1054 RMD160 c5e4abdbabadcb040a9cb09c52b67391a64f87b9 SHA1 4943070715da91b5ce94cb8d2bf084fa84991712 SHA256 aee8e91cbe17b5a5f26038eb187c6c4416f0e8ea654f3f256dee6d6e9cbf5369
 EBUILD aqemu-9999.ebuild 1228 RMD160 68f0f941db69c7e434de431b2e699dbe85f20a91 SHA1 631958f6b08fe11cc21f993e5fbc0627773c9674 SHA256 2ce691d6e5ed5a649dec1b364b13f5997e6eb83247416d681ee2df37b716ff72
-MISC ChangeLog 1449 RMD160 982a000d3609211a5641ae9cc48e6ffe0d75e532 SHA1 a7f5c33a620eb4e6ef3cef2772cccb9b6d2bb299 SHA256 c68847bff662e39b411c124420b469c962b603086440652699e4ca5c1119a124
+MISC ChangeLog 1544 RMD160 c60ced8f8025f12eb8ce158c8d0e58b1d45b9f65 SHA1 f555957caeecd78cfaa3b2620a37cf0920f91295 SHA256 1875353f8d4b909964a5376dc9b69a299c3b14a0acb78ee9eab03da4bb9d05de
 MISC metadata.xml 524 RMD160 dd7085ea6e94a28bc3b08f6aab3b487f1d6da0c7 SHA1 71a499aeb91747b2c842f894ff4b88bfd601b15a SHA256 3ccd9fe09b49d909c06efa912f7ced9749f72a1626e2f9f6628f1d16c4d7f346
