@@ -1,3 +1,7 @@
+# 13 Aug 2010; A.Vinogradov <spamslepnoga@inbox.ru>
+# ebuild use live dep's, waiting for in portage unmask 
+=app-emulation/aqemu-0.8.0-r1
+
 # 4  Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
 # Not work && build
 app-emulation/libguestfs
